# mysql-wrapper

./: CMakeLists.txt  MySQLWrapper.cpp  MySQLWrapper.h  MySQLWrapperConfig.cmake.in  README.md  mysqlwrapper.pc  mysqlwrapper.pc.in  xmake.lua
examples/: basic.cpp
include/mysqlwrapper/: mysql_wrapper.hpp
modules/: mysql.wrapper.cppm
src/: mysql_wrapper.cpp
tests/: mysqlwrapper_integration_tests.cpp  mysqlwrapper_tests.cpp
